added customer details page